ajuste metodotodos GET y PUT, y añadadido de paginado en get users
